--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tirumala TVS | Authorized TVS Dealer</title>
+
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="container header-flex">
+      <h1 class="logo">Tirumala TVS</h1>
+
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="models.html">Models</a>
+        <a href="contacts.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO -->
+  <section class="hero">
+    <div class="container hero-content">
+      <h2>Authorized TVS Two-Wheeler Dealer</h2>
+      <p>
+        Sales • Service • Genuine Spare Parts • Finance & Insurance  
+        <br />
+        <strong>Biddarahalli, Bengaluru</strong>
+      </p>
+
+      <a href="models.html" class="btn-primary">Explore TVS Models</a>
+    </div>
+  </section>
+
+  <!-- MODELS PREVIEW -->
+  <section class="models-preview">
+    <div class="container">
+      <h2 class="section-title">TVS Bikes & Scooters</h2>
+
+      <div class="models-grid">
+
+        <div class="model-card">
+          <h3>TVS XL 100</h3>
+          <p>India’s most trusted moped for work and business.</p>
+          <a href="models/xl100.html">View Details →</a>
+        </div>
+
+        <div class="model-card">
+          <h3>TVS Zest 110</h3>
+          <p>Lightweight scooter for effortless city riding.</p>
+          <a href="models/zest110.html">View Details →</a>
+        </div>
+
+        <div class="model-card">
+          <h3>TVS Jupiter 113</h3>
+          <p>Comfortable family scooter with refined ride quality.</p>
+          <a href="models/jupiter113.html">View Details →</a>
+        </div>
+
+        <div class="model-card">
+          <h3>TVS Jupiter 125</h3>
+          <p>Premium scooter with power and comfort.</p>
+          <a href="models/jupiter125.html">View Details →</a>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <p>© 2026 Tirumala TVS. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
 
