--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tirumala TVS | Authorized TVS Dealer</title>
 
+  <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-  <!-- HEADER -->
+  <!-- ================= HEADER ================= -->
   <header class="site-header">
     <div class="container header-flex">
-      <h1 class="logo">Tirumala TVS</h1>
+      <div class="logo">Tirumala TVS</div>
 
       <nav class="nav">
         <a href="index.html">Home</a>
@@ -22,24 +27,22 @@
     </div>
   </header>
 
-  <!-- HERO -->
+  <!-- ================= HERO ================= -->
   <section class="hero">
     <div class="container hero-content">
-      <h2>Authorized TVS Two-Wheeler Dealer</h2>
+      <h1>Authorized TVS Two-Wheeler Dealer</h1>
       <p>
-        Sales • Service • Genuine Spare Parts • Finance & Insurance  
-        <br />
-        <strong>Biddarahalli, Bengaluru</strong>
+        Sales • Service • Genuine Spare Parts • Finance & Insurance<br>
+        <strong>Bidarahalli, Bengaluru</strong>
       </p>
-
       <a href="models.html" class="btn-primary">Explore TVS Models</a>
     </div>
   </section>
 
-  <!-- MODELS PREVIEW -->
-  <section class="models-preview">
+  <!-- ================= MODELS ================= -->
+  <section class="models-section">
     <div class="container">
-      <h2 class="section-title">TVS Bikes & Scooters</h2>
+      <h2>TVS Bikes & Scooters</h2>
 
       <div class="models-grid">
 
@@ -63,19 +66,60 @@
 
         <div class="model-card">
           <h3>TVS Jupiter 125</h3>
-          <p>Premium scooter with power and comfort.</p>
+          <p>Premium scooter with power, comfort and boot space.</p>
           <a href="models/jupiter125.html">View Details →</a>
+        </div>
+
+        <div class="model-card">
+          <h3>TVS Ntorq 125</h3>
+          <p>Sporty performance scooter with smart features.</p>
+          <a href="models/ntorq125.html">View Details →</a>
+        </div>
+
+        <div class="model-card">
+          <h3>TVS Ntorq 150</h3>
+          <p>High-performance street scooter.</p>
+          <a href="models/ntorq150.html">View Details →</a>
+        </div>
+
+        <div class="model-card">
+          <h3>TVS Raider</h3>
+          <p>Sporty commuter with modern technology.</p>
+          <a href="models/raider.html">View Details →</a>
+        </div>
+
+        <div class="model-card">
+          <h3>TVS Apache Series</h3>
+          <p>Performance motorcycles inspired by racing.</p>
+          <a href="models/apache160.html">View Details →</a>
+        </div>
+
+        <div class="model-card">
+          <h3>TVS Ronin</h3>
+          <p>Modern-retro motorcycle with torque-rich performance.</p>
+          <a href="models/ronin.html">View Details →</a>
+        </div>
+
+        <div class="model-card">
+          <h3>TVS iQube</h3>
+          <p>Smart electric scooter for urban mobility.</p>
+          <a href="models/iqube.html">View Details →</a>
         </div>
 
       </div>
     </div>
   </section>
 
-  <!-- FOOTER -->
+  <!-- ================= FOOTER ================= -->
   <footer class="site-footer">
-    <p>© 2026 Tirumala TVS. All rights reserved.</p>
+    <div class="container">
+      <p>
+        Tirumala TVS<br>
+        Bidarahalli, Bengaluru
+      </p>
+      <p>© 2026 Tirumala TVS. All rights reserved.</p>
+    </div>
   </footer>
 
 </body>
 </html>
-
