--- a/models.html
+++ b/models.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>TVS Models | Tirumala TVS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="container header-flex">
+      <h1 class="logo">Tirumala TVS</h1>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="models.html" class="active">Models</a>
+        <a href="contacts.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- PAGE TITLE -->
+  <section class="page-title">
+    <div class="container">
+      <h2>TVS Bikes & Scooters</h2>
+      <p>Explore the complete range of TVS two-wheelers</p>
+    </div>
+  </section>
+
+  <!-- MODELS LIST -->
+  <section class="models-list">
+    <div class="container">
+
+      <!-- XL 100 -->
+      <div class="model-card">
+        <h3>TVS XL 100</h3>
+        <p>India’s most trusted moped for work and business.</p>
+        <a href="models/xl100.html" class="btn">View Details</a>
+      </div>
+
+      <!-- Zest 110 -->
+      <div class="model-card">
+        <h3>TVS Zest 110</h3>
+        <p>Lightweight scooter for effortless city riding.</p>
+        <a href="models/zest110.html" class="btn">View Details</a>
+      </div>
+
+      <!-- Jupiter 113 -->
+      <div class="model-card">
+        <h3>TVS Jupiter 113</h3>
+        <p>Comfortable family scooter with refined ride.</p>
+        <a href="models/jupiter113.html" class="btn">View Details</a>
+      </div>
+
+      <!-- Jupiter 125 -->
+      <div class="model-card">
+        <h3>TVS Jupiter 125</h3>
+        <p>Premium scooter with power and comfort.</p>
+        <a href="models/jupiter125.html" class="btn">View Details</a>
+      </div>
+
+      <!-- Ntorq 125 -->
+      <div class="model-card">
+        <h3>TVS Ntorq 125</h3>
+        <p>Sporty performance scooter with smart features.</p>
+        <a href="models/ntorq125.html" class="btn">View Details</a>
+      </div>
+
+      <!-- Ntorq 150 -->
+      <div class="model-card">
+        <h3>TVS Ntorq 150</h3>
+        <p>High-performance street scooter.</p>
+        <a href="models/ntorq150.html" class="btn">View Details</a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2026 Tirumala TVS. All rights reserved.</p>
+    </div>
+  </footer>
+
+</body>
+</html>
 
