--- a/models/ntorq150.html
+++ b/models/ntorq150.html
@@ -1,95 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TVS Ntorq 150 | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Main CSS -->
-  <link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8" />
+  <title>TVS NTORQ 150 | Tirumala TVS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
 
-  <!-- HEADER -->
+  <!-- HEADER (UNCHANGED FROM XL100) -->
   <header class="site-header">
     <div class="container header-flex">
       <h1 class="logo">Tirumala TVS</h1>
       <nav class="nav">
         <a href="../index.html">Home</a>
-        <a href="../models.html" class="active">Models</a>
+        <a href="../models.html">Models</a>
+        <a href="../about.html">About</a>
         <a href="../contacts.html">Contact</a>
       </nav>
     </div>
   </header>
 
-  <!-- HERO -->
+  <!-- HERO SECTION (SAME STRUCTURE AS XL100) -->
   <section class="model-hero">
     <div class="container">
-      <h2>TVS Ntorq 150</h2>
-      <p>High-performance street scooter with race-inspired DNA</p>
+      <h2>TVS NTORQ 150</h2>
+      <p>
+        India’s most powerful performance scooter built for thrill,
+        technology and sporty riding experience
+      </p>
     </div>
   </section>
 
-  <!-- CONTENT -->
-  <section class="model-content">
-    <div class="container">
+  <!-- CONTENT SECTION (LOCKED LAYOUT) -->
+  <main class="model-content container">
 
+    <!-- OVERVIEW -->
+    <section class="model-section">
       <h3>Overview</h3>
       <p>
-        TVS Ntorq 150 represents the next evolution of performance scooters from TVS.
-        Built for riders who demand stronger acceleration, sharper handling and bold
-        styling, the Ntorq 150 is positioned above the Ntorq 125 as a premium,
-        sport-focused street scooter.
+        TVS NTORQ 150 is a high-performance sporty scooter designed for riders
+        who want aggressive styling, strong acceleration and advanced
+        connected technology. It builds on the NTORQ DNA with enhanced power,
+        superior handling and race-inspired design.
       </p>
+    </section>
 
+    <!-- KEY HIGHLIGHTS -->
+    <section class="model-section">
       <h3>Key Highlights</h3>
       <ul>
-        <li>More powerful 150cc-class performance</li>
-        <li>Aggressive and sporty design language</li>
-        <li>Race-tuned chassis and suspension</li>
-        <li>Advanced SmartXonnect connectivity</li>
-        <li>Best-in-class handling and braking</li>
+        <li>Most powerful TVS scooter with class-leading performance</li>
+        <li>Aggressive race-inspired design and sporty stance</li>
+        <li>Advanced SmartXonnect connected technology</li>
+        <li>Excellent acceleration and handling stability</li>
+        <li>Trusted TVS build quality and reliability</li>
       </ul>
+    </section>
 
+    <!-- ENGINE & PERFORMANCE -->
+    <section class="model-section">
       <h3>Engine & Performance</h3>
       <ul>
-        <li><strong>Engine:</strong> 150 cc, liquid-cooled (expected)</li>
-        <li><strong>Power:</strong> Higher output than Ntorq 125</li>
+        <li><strong>Engine:</strong> 149.5 cc, liquid-cooled engine</li>
+        <li><strong>Power:</strong> Approx. 15 PS</li>
+        <li><strong>Torque:</strong> Approx. 13.5 Nm</li>
         <li><strong>Transmission:</strong> Automatic (CVT)</li>
-        <li><strong>Performance:</strong> Quick acceleration and sporty top-end</li>
+        <li><strong>Ride Focus:</strong> Sporty acceleration and stable cornering</li>
       </ul>
+    </section>
 
+    <!-- VARIANTS -->
+    <section class="model-section">
       <h3>Variants Available</h3>
       <ul>
-        <li>Standard</li>
-        <li>Race Edition</li>
-        <li>SmartXonnect Race XP</li>
+        <li>TVS NTORQ 150 Standard</li>
+        <li>TVS NTORQ 150 Race Edition</li>
       </ul>
+    </section>
 
+    <!-- COLOURS -->
+    <section class="model-section">
       <h3>Colour Options</h3>
       <ul>
         <li>Race Red</li>
         <li>Stealth Black</li>
-        <li>Matte Blue</li>
-        <li>Grey</li>
+        <li>Electric Blue</li>
+        <li>Matte Grey</li>
       </ul>
+    </section>
 
-      <h3>Price (Indicative)</h3>
+    <!-- CUSTOMER REVIEWS -->
+    <section class="model-section">
+      <h3>Customer Reviews (Summary)</h3>
+      <ul>
+        <li>Highly praised for power and sporty performance</li>
+        <li>Excellent ride stability at higher speeds</li>
+        <li>SmartXonnect features appreciated by young riders</li>
+        <li>Premium feel and solid road presence</li>
+      </ul>
+    </section>
+
+    <!-- WHY CHOOSE -->
+    <section class="model-section">
+      <h3>Why Choose TVS NTORQ 150?</h3>
       <p>
-        Expected ex-showroom Bengaluru price:
-        <strong>₹1,05,000 – ₹1,15,000 (approx.)</strong><br>
-        <small>*Final pricing may vary by variant and launch updates</small>
+        TVS NTORQ 150 is the perfect choice for riders who want a scooter that
+        delivers motorcycle-like performance with the convenience of an
+        automatic transmission. It is ideal for enthusiasts seeking speed,
+        technology and style in one powerful package.
       </p>
+    </section>
 
-      <a href="../contacts.html" class="btn">Enquire Now</a>
+  </main>
 
-    </div>
-  </section>
-
-  <!-- FOOTER -->
+  <!-- FOOTER (UNCHANGED FROM XL100) -->
   <footer class="site-footer">
     <div class="container">
       <p>© 2026 Tirumala TVS. All rights reserved.</p>
+      <p>D Cross, Bidarahalli Main Rd, Cheemasandra, Bengaluru – 560049</p>
     </div>
   </footer>
 
