--- a/models/ntorq150.html
+++ b/models/ntorq150.html
@@ -2,125 +2,134 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>TVS NTORQ 150 | Tirumala TVS</title>
+  <title>TVS Ntorq 150 – Price, Specs & Features | Tirumala TVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="TVS Ntorq 150 – High performance sporty scooter with aggressive design and advanced technology. Check expected price, specs and features at Tirumala TVS." />
   <link rel="stylesheet" href="../css/style.css" />
 </head>
+
 <body>
 
-  <!-- HEADER (UNCHANGED FROM XL100) -->
-  <header class="site-header">
-    <div class="container header-flex">
-      <h1 class="logo">Tirumala TVS</h1>
-      <nav class="nav">
-        <a href="../index.html">Home</a>
-        <a href="../models.html">Models</a>
-        <a href="../about.html">About</a>
-        <a href="../contacts.html">Contact</a>
-      </nav>
-    </div>
-  </header>
+<!-- HEADER -->
+<header style="border-bottom:1px solid #e5e7eb;">
+  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
+    <h2 style="margin:0;">Tirumala TVS</h2>
+    <nav>
+      <a href="../index.html" style="margin-right:16px;">Home</a>
+      <a href="../models.html" style="margin-right:16px;">Models</a>
+      <a href="../contacts.html">Contact</a>
+    </nav>
+  </div>
+</header>
 
-  <!-- HERO SECTION (SAME STRUCTURE AS XL100) -->
-  <section class="model-hero">
-    <div class="container">
-      <h2>TVS NTORQ 150</h2>
-      <p>
-        India’s most powerful performance scooter built for thrill,
-        technology and sporty riding experience
-      </p>
-    </div>
+<!-- HERO -->
+<section style="background:#0b4fd8;color:#fff;">
+  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
+    <h1 style="font-size:42px;margin-bottom:10px;">TVS Ntorq 150</h1>
+    <p style="font-size:18px;opacity:0.95;">
+      High-performance sporty scooter with race-inspired DNA
+    </p>
+  </div>
+</section>
+
+<!-- CONTENT -->
+<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+
+  <!-- OVERVIEW -->
+  <section style="margin-bottom:40px;">
+    <h2>Overview</h2>
+    <p>
+      TVS Ntorq 150 is positioned as a next-generation performance scooter for riders
+      who demand more power, sharper acceleration and premium sporty styling.
+      Built on the successful Ntorq platform, the 150 cc version focuses on thrill,
+      stability and advanced riding experience.
+    </p>
   </section>
 
-  <!-- CONTENT SECTION (LOCKED LAYOUT) -->
-  <main class="model-content container">
+  <!-- KEY HIGHLIGHTS -->
+  <section style="margin-bottom:40px;">
+    <h2>Key Highlights</h2>
+    <ul>
+      <li>More powerful engine compared to Ntorq 125</li>
+      <li>Aggressive and muscular sporty design</li>
+      <li>Race-inspired handling and suspension tuning</li>
+      <li>Advanced SmartXonnect connected features</li>
+      <li>Strong braking and high-speed stability</li>
+    </ul>
+  </section>
 
-    <!-- OVERVIEW -->
-    <section class="model-section">
-      <h3>Overview</h3>
-      <p>
-        TVS NTORQ 150 is a high-performance sporty scooter designed for riders
-        who want aggressive styling, strong acceleration and advanced
-        connected technology. It builds on the NTORQ DNA with enhanced power,
-        superior handling and race-inspired design.
-      </p>
-    </section>
+  <!-- ENGINE -->
+  <section style="margin-bottom:40px;">
+    <h2>Engine & Performance</h2>
+    <table style="width:100%;border-collapse:collapse;">
+      <tr><td><strong>Engine</strong></td><td>150 cc (expected), liquid-cooled</td></tr>
+      <tr><td><strong>Power</strong></td><td>Higher than Ntorq 125 (expected)</td></tr>
+      <tr><td><strong>Torque</strong></td><td>Improved torque for quick acceleration</td></tr>
+      <tr><td><strong>Transmission</strong></td><td>Automatic (CVT)</td></tr>
+      <tr><td><strong>Ride Focus</strong></td><td>Sporty street riding & performance</td></tr>
+    </table>
+  </section>
 
-    <!-- KEY HIGHLIGHTS -->
-    <section class="model-section">
-      <h3>Key Highlights</h3>
-      <ul>
-        <li>Most powerful TVS scooter with class-leading performance</li>
-        <li>Aggressive race-inspired design and sporty stance</li>
-        <li>Advanced SmartXonnect connected technology</li>
-        <li>Excellent acceleration and handling stability</li>
-        <li>Trusted TVS build quality and reliability</li>
-      </ul>
-    </section>
+  <!-- VARIANTS -->
+  <section style="margin-bottom:40px;">
+    <h2>Variants Available</h2>
+    <ul>
+      <li>TVS Ntorq 150 Standard</li>
+      <li>TVS Ntorq 150 Race Edition</li>
+    </ul>
+  </section>
 
-    <!-- ENGINE & PERFORMANCE -->
-    <section class="model-section">
-      <h3>Engine & Performance</h3>
-      <ul>
-        <li><strong>Engine:</strong> 149.5 cc, liquid-cooled engine</li>
-        <li><strong>Power:</strong> Approx. 15 PS</li>
-        <li><strong>Torque:</strong> Approx. 13.5 Nm</li>
-        <li><strong>Transmission:</strong> Automatic (CVT)</li>
-        <li><strong>Ride Focus:</strong> Sporty acceleration and stable cornering</li>
-      </ul>
-    </section>
+  <!-- COLOURS -->
+  <section style="margin-bottom:40px;">
+    <h2>Colour Options</h2>
+    <ul>
+      <li>Race Red</li>
+      <li>Electric Blue</li>
+      <li>Stealth Black</li>
+      <li>Matte Grey</li>
+    </ul>
+  </section>
 
-    <!-- VARIANTS -->
-    <section class="model-section">
-      <h3>Variants Available</h3>
-      <ul>
-        <li>TVS NTORQ 150 Standard</li>
-        <li>TVS NTORQ 150 Race Edition</li>
-      </ul>
-    </section>
+  <!-- PRICE -->
+  <section style="margin-bottom:40px;">
+    <h2>Expected Price</h2>
+    <p>
+      Expected ex-showroom price in Bengaluru  
+      <strong>₹1,05,000 – ₹1,15,000 (approx.)</strong>
+    </p>
+    <p style="font-size:14px;color:#555;">
+      *Final price may vary after official launch
+    </p>
+  </section>
 
-    <!-- COLOURS -->
-    <section class="model-section">
-      <h3>Colour Options</h3>
-      <ul>
-        <li>Race Red</li>
-        <li>Stealth Black</li>
-        <li>Electric Blue</li>
-        <li>Matte Grey</li>
-      </ul>
-    </section>
+  <!-- WHY BUY -->
+  <section style="margin-bottom:40px;">
+    <h2>Why Choose TVS Ntorq 150?</h2>
+    <p>
+      TVS Ntorq 150 is ideal for riders who want a scooter that delivers motorcycle-like
+      performance with automatic convenience. Its sporty character, advanced features
+      and strong road presence make it a premium choice for enthusiasts.
+    </p>
+  </section>
 
-    <!-- CUSTOMER REVIEWS -->
-    <section class="model-section">
-      <h3>Customer Reviews (Summary)</h3>
-      <ul>
-        <li>Highly praised for power and sporty performance</li>
-        <li>Excellent ride stability at higher speeds</li>
-        <li>SmartXonnect features appreciated by young riders</li>
-        <li>Premium feel and solid road presence</li>
-      </ul>
-    </section>
+  <!-- CTA -->
+  <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
+    <h3>Interested in TVS Ntorq 150?</h3>
+    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and updates.</p>
+    <a href="../contacts.html"
+       style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
+      Enquire Now
+    </a>
+  </section>
 
-    <!-- WHY CHOOSE -->
-    <section class="model-section">
-      <h3>Why Choose TVS NTORQ 150?</h3>
-      <p>
-        TVS NTORQ 150 is the perfect choice for riders who want a scooter that
-        delivers motorcycle-like performance with the convenience of an
-        automatic transmission. It is ideal for enthusiasts seeking speed,
-        technology and style in one powerful package.
-      </p>
-    </section>
+</main>
 
-  </main>
-
-  <!-- FOOTER (UNCHANGED FROM XL100) -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>© 2026 Tirumala TVS. All rights reserved.</p>
-      <p>D Cross, Bidarahalli Main Rd, Cheemasandra, Bengaluru – 560049</p>
-    </div>
-  </footer>
+<!-- FOOTER -->
+<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
+  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
+    © 2026 Tirumala TVS. All rights reserved.
+  </div>
+</footer>
 
 </body>
 </html>
