--- a/raider.html
+++ b/raider.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>TVS Raider 125 – Price, Specs & Features | Tirumala TVS</title>
+  <title>TVS Raider – Price, Specs & Features | Tirumala TVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS Raider 125 – Sporty commuter motorcycle with powerful 125cc engine, modern features and excellent mileage. Check price, specs and features at Tirumala TVS." />
+  <meta name="description" content="TVS Raider – Sporty 125cc motorcycle with modern features, strong performance and excellent mileage. Check price, specs and variants at Tirumala TVS." />
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 
@@ -25,9 +25,9 @@
 <!-- HERO -->
 <section style="background:#0b4fd8;color:#fff;">
   <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS Raider 125</h1>
+    <h1 style="font-size:42px;margin-bottom:10px;">TVS Raider</h1>
     <p style="font-size:18px;opacity:0.95;">
-      Sporty commuter motorcycle with performance, style and technology
+      Sporty commuter motorcycle with performance, comfort and technology
     </p>
   </div>
 </section>
@@ -39,10 +39,10 @@
   <section style="margin-bottom:40px;">
     <h2>Overview</h2>
     <p>
-      TVS Raider 125 is a modern sporty commuter motorcycle designed for riders
-      who want strong performance, aggressive styling and advanced features in
-      the 125 cc segment. It stands out with its powerful engine, comfortable
-      ergonomics and premium digital instrumentation.
+      TVS Raider is a modern 125cc motorcycle designed for young riders and daily
+      commuters who want a perfect balance of sporty performance, comfort and
+      advanced features. With its aggressive styling, powerful engine and refined
+      ride quality, Raider stands out in the premium commuter segment.
     </p>
   </section>
 
@@ -53,7 +53,7 @@
       <li>Powerful and refined 125 cc engine</li>
       <li>Sporty design with muscular fuel tank</li>
       <li>Advanced digital instrument cluster</li>
-      <li>Excellent balance of performance and mileage</li>
+      <li>Excellent balance of mileage and performance</li>
       <li>Comfortable riding posture for daily use</li>
     </ul>
   </section>
@@ -66,7 +66,7 @@
       <tr><td><strong>Power</strong></td><td>Approx. 12.9 PS</td></tr>
       <tr><td><strong>Torque</strong></td><td>Approx. 11.5 Nm</td></tr>
       <tr><td><strong>Transmission</strong></td><td>5-speed manual</td></tr>
-      <tr><td><strong>Ride Focus</strong></td><td>Sporty city commuting & highway rides</td></tr>
+      <tr><td><strong>Ride Focus</strong></td><td>Sporty city rides & highway cruising</td></tr>
     </table>
   </section>
 
@@ -106,18 +106,18 @@
 
   <!-- WHY BUY -->
   <section style="margin-bottom:40px;">
-    <h2>Why Choose TVS Raider 125?</h2>
+    <h2>Why Choose TVS Raider?</h2>
     <p>
-      TVS Raider 125 is the ideal motorcycle for young riders and daily commuters
-      who want a perfect mix of performance, comfort and modern features.
-      Its sporty character, strong engine and stylish design make it one of
-      the most popular bikes in the 125 cc segment even in 2026.
+      TVS Raider is ideal for riders who want a stylish and powerful motorcycle
+      for daily commuting without compromising on comfort or fuel efficiency.
+      Its modern features, strong engine and sporty appeal make it one of the
+      most popular 125cc motorcycles in India even in 2026.
     </p>
   </section>
 
   <!-- CTA -->
   <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
-    <h3>Interested in TVS Raider 125?</h3>
+    <h3>Interested in TVS Raider?</h3>
     <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and test ride.</p>
     <a href="../contacts.html"
        style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
