--- a/models.html
+++ b/models.html
@@ -4,88 +4,70 @@
   <meta charset="UTF-8" />
   <title>TVS Models | Tirumala TVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
 
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="container header-flex">
-      <h1 class="logo">Tirumala TVS</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="models.html" class="active">Models</a>
-        <a href="contacts.html">Contact</a>
-      </nav>
-    </div>
-  </header>
+<!-- HEADER -->
+<header style="border-bottom:1px solid #e5e7eb;">
+  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
+    <h2 style="margin:0;">Tirumala TVS</h2>
+    <nav>
+      <a href="index.html" style="margin-right:16px;">Home</a>
+      <a href="models.html" style="margin-right:16px;">Models</a>
+      <a href="contacts.html">Contact</a>
+    </nav>
+  </div>
+</header>
 
-  <!-- PAGE TITLE -->
-  <section class="page-title">
-    <div class="container">
-      <h2>TVS Bikes & Scooters</h2>
-      <p>Explore the complete range of TVS two-wheelers</p>
-    </div>
+<!-- HERO -->
+<section style="background:#0b4fd8;color:#fff;">
+  <div style="max-width:1200px;margin:auto;padding:50px 16px;">
+    <h1 style="font-size:40px;margin-bottom:8px;">TVS Two-Wheeler Models</h1>
+    <p style="font-size:18px;opacity:0.95;">
+      Explore the complete range of TVS bikes and scooters
+    </p>
+  </div>
+</section>
+
+<!-- MODELS LIST -->
+<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+
+  <!-- SCOOTERS -->
+  <section style="margin-bottom:50px;">
+    <h2>Scooters</h2>
+    <ul style="line-height:2;">
+      <li><a href="models/xl100.html">TVS XL 100</a></li>
+      <li><a href="models/zest110.html">TVS Zest 110</a></li>
+      <li><a href="models/jupiter113.html">TVS Jupiter 113</a></li>
+      <li><a href="models/jupiter125.html">TVS Jupiter 125</a></li>
+      <li><a href="models/ntorq125.html">TVS Ntorq 125</a></li>
+      <li><a href="models/ntorq150.html">TVS Ntorq 150</a></li>
+      <li><a href="models/iqube.html">TVS iQube (Electric)</a></li>
+    </ul>
   </section>
 
-  <!-- MODELS LIST -->
-  <section class="models-list">
-    <div class="container">
-
-      <!-- XL 100 -->
-      <div class="model-card">
-        <h3>TVS XL 100</h3>
-        <p>India’s most trusted moped for work and business.</p>
-        <a href="models/xl100.html" class="btn">View Details</a>
-      </div>
-
-      <!-- Zest 110 -->
-      <div class="model-card">
-        <h3>TVS Zest 110</h3>
-        <p>Lightweight scooter for effortless city riding.</p>
-        <a href="models/zest110.html" class="btn">View Details</a>
-      </div>
-
-      <!-- Jupiter 113 -->
-      <div class="model-card">
-        <h3>TVS Jupiter 113</h3>
-        <p>Comfortable family scooter with refined ride.</p>
-        <a href="models/jupiter113.html" class="btn">View Details</a>
-      </div>
-
-      <!-- Jupiter 125 -->
-      <div class="model-card">
-        <h3>TVS Jupiter 125</h3>
-        <p>Premium scooter with power and comfort.</p>
-        <a href="models/jupiter125.html" class="btn">View Details</a>
-      </div>
-
-      <!-- Ntorq 125 -->
-      <div class="model-card">
-        <h3>TVS Ntorq 125</h3>
-        <p>Sporty performance scooter with smart features.</p>
-        <a href="models/ntorq125.html" class="btn">View Details</a>
-      </div>
-
-      <!-- Ntorq 150 -->
-      <div class="model-card">
-        <h3>TVS Ntorq 150</h3>
-        <p>High-performance street scooter.</p>
-        <a href="models/ntorq150.html" class="btn">View Details</a>
-      </div>
-
-    </div>
+  <!-- MOTORCYCLES -->
+  <section style="margin-bottom:50px;">
+    <h2>Motorcycles</h2>
+    <ul style="line-height:2;">
+      <li><a href="models/raider.html">TVS Raider</a></li>
+      <li><a href="models/apache160.html">TVS Apache RTR 160</a></li>
+      <li><a href="models/apache200.html">TVS Apache RTR 200</a></li>
+      <li><a href="models/rr310.html">TVS Apache RR 310</a></li>
+      <li><a href="models/ronin.html">TVS Ronin</a></li>
+    </ul>
   </section>
 
-  <!-- FOOTER -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>© 2026 Tirumala TVS. All rights reserved.</p>
-    </div>
-  </footer>
+</main>
+
+<!-- FOOTER -->
+<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
+  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
+    © 2026 Tirumala TVS. All rights reserved.
+  </div>
+</footer>
 
 </body>
 </html>
-
