--- a/models/apache160.html
+++ b/models/apache160.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>TVS Apache RTR 160 – Price, Specs & Features | Tirumala TVS</title>
+  <title>TVS Apache Series – 160, 200 & RR 310 | Tirumala TVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS Apache RTR 160 – Performance motorcycle with racing DNA, strong engine and agile handling. Check price, specs and variants at Tirumala TVS." />
+  <meta name="description" content="Explore TVS Apache RTR 160, Apache RTR 200 and Apache RR 310. Racing motorcycles with performance, technology and Apache DNA at Tirumala TVS." />
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 
@@ -25,9 +25,9 @@
 <!-- HERO -->
 <section style="background:#0b4fd8;color:#fff;">
   <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS Apache RTR 160</h1>
+    <h1 style="font-size:42px;margin-bottom:10px;">TVS Apache Series</h1>
     <p style="font-size:18px;opacity:0.95;">
-      Race-tuned performance motorcycle with legendary Apache DNA
+      Racing DNA. Proven Performance. Legendary Apache Motorcycles
     </p>
   </div>
 </section>
@@ -35,89 +35,91 @@
 <!-- CONTENT -->
 <main style="max-width:1200px;margin:auto;padding:40px 16px;">
 
-  <!-- OVERVIEW -->
-  <section style="margin-bottom:40px;">
-    <h2>Overview</h2>
+  <!-- ================= APACHE 160 ================= -->
+  <section style="margin-bottom:60px;">
+    <h2>TVS Apache RTR 160</h2>
     <p>
-      TVS Apache RTR 160 is one of India’s most successful performance motorcycles,
-      known for its racing pedigree, powerful engine and sharp handling.
-      Designed for riders who love spirited riding, the Apache RTR 160 delivers
-      a perfect blend of speed, control and everyday usability.
+      TVS Apache RTR 160 is a race-bred performance motorcycle known for its sharp
+      handling, powerful engine and lightweight chassis. It is designed for riders
+      who enjoy spirited riding with everyday usability.
     </p>
-  </section>
 
-  <!-- KEY HIGHLIGHTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Key Highlights</h2>
+    <h3>Key Highlights</h3>
     <ul>
-      <li>Race-derived engine with strong mid-range performance</li>
-      <li>Sharp handling and lightweight chassis</li>
-      <li>Sporty and aggressive styling</li>
+      <li>159.7 cc race-tuned engine</li>
+      <li>Sharp handling and agile performance</li>
+      <li>Sporty Apache styling</li>
       <li>Excellent braking and stability</li>
-      <li>Trusted Apache racing heritage</li>
     </ul>
-  </section>
 
-  <!-- ENGINE -->
-  <section style="margin-bottom:40px;">
-    <h2>Engine & Performance</h2>
+    <h3>Engine & Performance</h3>
     <table style="width:100%;border-collapse:collapse;">
       <tr><td><strong>Engine</strong></td><td>159.7 cc, air-cooled</td></tr>
       <tr><td><strong>Power</strong></td><td>Approx. 15.5 PS</td></tr>
-      <tr><td><strong>Torque</strong></td><td>Approx. 13.9 Nm</td></tr>
       <tr><td><strong>Transmission</strong></td><td>5-speed manual</td></tr>
-      <tr><td><strong>Ride Focus</strong></td><td>Sporty riding & agile handling</td></tr>
     </table>
+
+    <p><strong>Price:</strong> ₹1.20 lakh (approx. ex-showroom)</p>
   </section>
 
-  <!-- VARIANTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Variants Available</h2>
-    <ul>
-      <li>TVS Apache RTR 160 Drum</li>
-      <li>TVS Apache RTR 160 Disc</li>
-      <li>TVS Apache RTR 160 Dual Channel ABS</li>
-    </ul>
-  </section>
-
-  <!-- COLOURS -->
-  <section style="margin-bottom:40px;">
-    <h2>Colour Options</h2>
-    <ul>
-      <li>Racing Red</li>
-      <li>Gloss Black</li>
-      <li>Matte Blue</li>
-      <li>Grey</li>
-    </ul>
-  </section>
-
-  <!-- PRICE -->
-  <section style="margin-bottom:40px;">
-    <h2>Price (Indicative)</h2>
+  <!-- ================= APACHE 200 ================= -->
+  <section style="margin-bottom:60px;">
+    <h2>TVS Apache RTR 200 4V</h2>
     <p>
-      Ex-showroom price in Bengaluru starts from  
-      <strong>₹1,20,000 (approx.)</strong>
+      TVS Apache RTR 200 4V is a performance-focused street motorcycle offering
+      advanced technology, strong acceleration and superior control. It is built
+      for riders who want track-inspired performance on everyday roads.
     </p>
-    <p style="font-size:14px;color:#555;">
-      *Prices may vary depending on variant and offers
-    </p>
+
+    <h3>Key Highlights</h3>
+    <ul>
+      <li>197.75 cc 4-valve oil-cooled engine</li>
+      <li>Ride modes for city and sport riding</li>
+      <li>Dual-channel ABS</li>
+      <li>Premium digital instrumentation</li>
+    </ul>
+
+    <h3>Engine & Performance</h3>
+    <table style="width:100%;border-collapse:collapse;">
+      <tr><td><strong>Engine</strong></td><td>197.75 cc, oil-cooled</td></tr>
+      <tr><td><strong>Power</strong></td><td>Approx. 20.8 PS</td></tr>
+      <tr><td><strong>Transmission</strong></td><td>5-speed manual</td></tr>
+    </table>
+
+    <p><strong>Price:</strong> ₹1.45 lakh (approx. ex-showroom)</p>
   </section>
 
-  <!-- WHY BUY -->
-  <section style="margin-bottom:40px;">
-    <h2>Why Choose TVS Apache RTR 160?</h2>
+  <!-- ================= APACHE RR 310 ================= -->
+  <section style="margin-bottom:60px;">
+    <h2>TVS Apache RR 310</h2>
     <p>
-      TVS Apache RTR 160 is ideal for riders who want a motorcycle that delivers
-      thrilling performance without compromising on reliability or daily comfort.
-      Its racing roots, precise handling and proven engine make it a favourite
-      among enthusiasts even in 2026.
+      TVS Apache RR 310 is a fully-faired premium sports motorcycle developed with
+      racing expertise and advanced engineering. It delivers track-level performance
+      with cutting-edge electronics and aerodynamic design.
     </p>
+
+    <h3>Key Highlights</h3>
+    <ul>
+      <li>312.2 cc liquid-cooled engine</li>
+      <li>Multiple riding modes and traction control</li>
+      <li>Bi-directional quick shifter</li>
+      <li>Race-spec chassis and suspension</li>
+    </ul>
+
+    <h3>Engine & Performance</h3>
+    <table style="width:100%;border-collapse:collapse;">
+      <tr><td><strong>Engine</strong></td><td>312.2 cc, liquid-cooled</td></tr>
+      <tr><td><strong>Power</strong></td><td>Approx. 34 PS</td></tr>
+      <tr><td><strong>Transmission</strong></td><td>6-speed manual</td></tr>
+    </table>
+
+    <p><strong>Price:</strong> ₹2.72 lakh (approx. ex-showroom)</p>
   </section>
 
   <!-- CTA -->
   <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
-    <h3>Interested in TVS Apache RTR 160?</h3>
-    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and test ride.</p>
+    <h3>Interested in TVS Apache Motorcycles?</h3>
+    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and test rides.</p>
     <a href="../contacts.html"
        style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
       Enquire Now
