--- a/models/apache160.html
+++ b/models/apache160.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>TVS Apache Series – 160, 200 & RR 310 | Tirumala TVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Explore TVS Apache RTR 160, Apache RTR 200 and Apache RR 310. Racing motorcycles with performance, technology and Apache DNA at Tirumala TVS." />
+  <meta name="description" content="Explore TVS Apache RTR 160, Apache RTR 200 and Apache RR 310. Performance motorcycles with racing DNA at Tirumala TVS." />
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 
@@ -35,16 +35,16 @@
 <!-- CONTENT -->
 <main style="max-width:1200px;margin:auto;padding:40px 16px;">
 
-  <!-- ================= APACHE 160 ================= -->
-  <section style="margin-bottom:60px;">
+  <!-- APACHE 160 -->
+  <section style="margin-bottom:40px;">
     <h2>TVS Apache RTR 160</h2>
     <p>
       TVS Apache RTR 160 is a race-bred performance motorcycle known for its sharp
-      handling, powerful engine and lightweight chassis. It is designed for riders
+      handling, responsive engine and lightweight chassis. It is designed for riders
       who enjoy spirited riding with everyday usability.
     </p>
 
-    <h3>Key Highlights</h3>
+    <h2>Key Highlights</h2>
     <ul>
       <li>159.7 cc race-tuned engine</li>
       <li>Sharp handling and agile performance</li>
@@ -52,7 +52,7 @@
       <li>Excellent braking and stability</li>
     </ul>
 
-    <h3>Engine & Performance</h3>
+    <h2>Engine & Performance</h2>
     <table style="width:100%;border-collapse:collapse;">
       <tr><td><strong>Engine</strong></td><td>159.7 cc, air-cooled</td></tr>
       <tr><td><strong>Power</strong></td><td>Approx. 15.5 PS</td></tr>
@@ -62,8 +62,8 @@
     <p><strong>Price:</strong> ₹1.20 lakh (approx. ex-showroom)</p>
   </section>
 
-  <!-- ================= APACHE 200 ================= -->
-  <section style="margin-bottom:60px;">
+  <!-- APACHE 200 -->
+  <section style="margin-bottom:40px;">
     <h2>TVS Apache RTR 200 4V</h2>
     <p>
       TVS Apache RTR 200 4V is a performance-focused street motorcycle offering
@@ -71,7 +71,7 @@
       for riders who want track-inspired performance on everyday roads.
     </p>
 
-    <h3>Key Highlights</h3>
+    <h2>Key Highlights</h2>
     <ul>
       <li>197.75 cc 4-valve oil-cooled engine</li>
       <li>Ride modes for city and sport riding</li>
@@ -79,7 +79,7 @@
       <li>Premium digital instrumentation</li>
     </ul>
 
-    <h3>Engine & Performance</h3>
+    <h2>Engine & Performance</h2>
     <table style="width:100%;border-collapse:collapse;">
       <tr><td><strong>Engine</strong></td><td>197.75 cc, oil-cooled</td></tr>
       <tr><td><strong>Power</strong></td><td>Approx. 20.8 PS</td></tr>
@@ -89,8 +89,8 @@
     <p><strong>Price:</strong> ₹1.45 lakh (approx. ex-showroom)</p>
   </section>
 
-  <!-- ================= APACHE RR 310 ================= -->
-  <section style="margin-bottom:60px;">
+  <!-- APACHE RR 310 -->
+  <section style="margin-bottom:40px;">
     <h2>TVS Apache RR 310</h2>
     <p>
       TVS Apache RR 310 is a fully-faired premium sports motorcycle developed with
@@ -98,7 +98,7 @@
       with cutting-edge electronics and aerodynamic design.
     </p>
 
-    <h3>Key Highlights</h3>
+    <h2>Key Highlights</h2>
     <ul>
       <li>312.2 cc liquid-cooled engine</li>
       <li>Multiple riding modes and traction control</li>
@@ -106,7 +106,7 @@
       <li>Race-spec chassis and suspension</li>
     </ul>
 
-    <h3>Engine & Performance</h3>
+    <h2>Engine & Performance</h2>
     <table style="width:100%;border-collapse:collapse;">
       <tr><td><strong>Engine</strong></td><td>312.2 cc, liquid-cooled</td></tr>
       <tr><td><strong>Power</strong></td><td>Approx. 34 PS</td></tr>
