--- a/models/apache160.html
+++ b/models/apache160.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>TVS Apache Series – 160, 200 & RR 310 | Tirumala TVS</title>
+  <title>TVS Apache Series – 160 | 200 | RR 310 | Tirumala TVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Explore TVS Apache RTR 160, Apache RTR 200 and Apache RR 310. Performance motorcycles with racing DNA at Tirumala TVS." />
+  <meta name="description" content="TVS Apache RTR 160, RTR 200 4V and RR 310 – Performance motorcycles with racing DNA. Explore specs and prices at Tirumala TVS." />
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 
@@ -27,33 +27,34 @@
   <div style="max-width:1200px;margin:auto;padding:60px 16px;">
     <h1 style="font-size:42px;margin-bottom:10px;">TVS Apache Series</h1>
     <p style="font-size:18px;opacity:0.95;">
-      Racing DNA. Proven Performance. Legendary Apache Motorcycles
+      Race-bred performance motorcycles with legendary Apache DNA
     </p>
   </div>
 </section>
 
 <!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+<main style="max-width:1200px;margin:auto;padding:50px 16px;">
 
-  <!-- APACHE 160 -->
-  <section style="margin-bottom:40px;">
-    <h2>TVS Apache RTR 160</h2>
-    <p>
-      TVS Apache RTR 160 is a race-bred performance motorcycle known for its sharp
-      handling, responsive engine and lightweight chassis. It is designed for riders
-      who enjoy spirited riding with everyday usability.
+  <!-- ================= APACHE 160 ================= -->
+  <section style="margin-bottom:70px;">
+    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
+      TVS Apache RTR 160
+    </h2>
+
+    <p style="margin-bottom:18px;">
+      TVS Apache RTR 160 is a race-bred performance motorcycle known for sharp handling,
+      responsive acceleration and lightweight construction. It is ideal for riders
+      who want sporty performance with everyday usability.
     </p>
 
-    <h2>Key Highlights</h2>
-    <ul>
+    <ul style="margin-bottom:18px;">
       <li>159.7 cc race-tuned engine</li>
-      <li>Sharp handling and agile performance</li>
-      <li>Sporty Apache styling</li>
-      <li>Excellent braking and stability</li>
+      <li>Agile handling and precise control</li>
+      <li>Sporty Apache design language</li>
+      <li>Excellent braking stability</li>
     </ul>
 
-    <h2>Engine & Performance</h2>
-    <table style="width:100%;border-collapse:collapse;">
+    <table style="width:100%;border-collapse:collapse;margin-bottom:18px;">
       <tr><td><strong>Engine</strong></td><td>159.7 cc, air-cooled</td></tr>
       <tr><td><strong>Power</strong></td><td>Approx. 15.5 PS</td></tr>
       <tr><td><strong>Transmission</strong></td><td>5-speed manual</td></tr>
@@ -62,25 +63,26 @@
     <p><strong>Price:</strong> ₹1.20 lakh (approx. ex-showroom)</p>
   </section>
 
-  <!-- APACHE 200 -->
-  <section style="margin-bottom:40px;">
-    <h2>TVS Apache RTR 200 4V</h2>
-    <p>
-      TVS Apache RTR 200 4V is a performance-focused street motorcycle offering
-      advanced technology, strong acceleration and superior control. It is built
-      for riders who want track-inspired performance on everyday roads.
+  <!-- ================= APACHE 200 ================= -->
+  <section style="margin-bottom:70px;">
+    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
+      TVS Apache RTR 200 4V
+    </h2>
+
+    <p style="margin-bottom:18px;">
+      Apache RTR 200 4V takes performance to the next level with advanced electronics,
+      ride modes and a powerful oil-cooled engine. It is built for riders who want
+      track-inspired performance on city roads.
     </p>
 
-    <h2>Key Highlights</h2>
-    <ul>
+    <ul style="margin-bottom:18px;">
       <li>197.75 cc 4-valve oil-cooled engine</li>
-      <li>Ride modes for city and sport riding</li>
+      <li>Urban, Sport and Rain ride modes</li>
       <li>Dual-channel ABS</li>
-      <li>Premium digital instrumentation</li>
+      <li>Race-tuned suspension</li>
     </ul>
 
-    <h2>Engine & Performance</h2>
-    <table style="width:100%;border-collapse:collapse;">
+    <table style="width:100%;border-collapse:collapse;margin-bottom:18px;">
       <tr><td><strong>Engine</strong></td><td>197.75 cc, oil-cooled</td></tr>
       <tr><td><strong>Power</strong></td><td>Approx. 20.8 PS</td></tr>
       <tr><td><strong>Transmission</strong></td><td>5-speed manual</td></tr>
@@ -89,25 +91,26 @@
     <p><strong>Price:</strong> ₹1.45 lakh (approx. ex-showroom)</p>
   </section>
 
-  <!-- APACHE RR 310 -->
-  <section style="margin-bottom:40px;">
-    <h2>TVS Apache RR 310</h2>
-    <p>
-      TVS Apache RR 310 is a fully-faired premium sports motorcycle developed with
-      racing expertise and advanced engineering. It delivers track-level performance
-      with cutting-edge electronics and aerodynamic design.
+  <!-- ================= APACHE RR 310 ================= -->
+  <section style="margin-bottom:70px;">
+    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
+      TVS Apache RR 310
+    </h2>
+
+    <p style="margin-bottom:18px;">
+      TVS Apache RR 310 is a fully-faired premium sports motorcycle engineered for
+      high-speed stability, track performance and advanced electronics. It represents
+      the pinnacle of Apache racing technology.
     </p>
 
-    <h2>Key Highlights</h2>
-    <ul>
-      <li>312.2 cc liquid-cooled engine</li>
-      <li>Multiple riding modes and traction control</li>
+    <ul style="margin-bottom:18px;">
+      <li>312.2 cc liquid-cooled performance engine</li>
       <li>Bi-directional quick shifter</li>
-      <li>Race-spec chassis and suspension</li>
+      <li>Multiple riding modes & traction control</li>
+      <li>Aerodynamic race-inspired fairing</li>
     </ul>
 
-    <h2>Engine & Performance</h2>
-    <table style="width:100%;border-collapse:collapse;">
+    <table style="width:100%;border-collapse:collapse;margin-bottom:18px;">
       <tr><td><strong>Engine</strong></td><td>312.2 cc, liquid-cooled</td></tr>
       <tr><td><strong>Power</strong></td><td>Approx. 34 PS</td></tr>
       <tr><td><strong>Transmission</strong></td><td>6-speed manual</td></tr>
@@ -117,11 +120,13 @@
   </section>
 
   <!-- CTA -->
-  <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
-    <h3>Interested in TVS Apache Motorcycles?</h3>
-    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and test rides.</p>
+  <section style="padding:35px;background:#f5f7fb;border-radius:12px;">
+    <h3 style="margin-bottom:10px;">Interested in TVS Apache Motorcycles?</h3>
+    <p style="margin-bottom:16px;">
+      Visit Tirumala TVS, Bidarahalli or contact us for best offers and test rides.
+    </p>
     <a href="../contacts.html"
-       style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
+       style="display:inline-block;padding:12px 26px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
       Enquire Now
     </a>
   </section>
@@ -129,7 +134,7 @@
 </main>
 
 <!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
+<footer style="border-top:1px solid #e5e7eb;margin-top:50px;">
   <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
     © 2026 Tirumala TVS. All rights reserved.
   </div>
