--- a/models/iqube.html
+++ b/models/iqube.html
@@ -1,1 +1,160 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>TVS iQube – Electric Scooter Price, Specs & Features | Tirumala TVS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="TVS iQube – Smart electric scooter with long range, connected features and smooth performance. Check price, variants and specs at Tirumala TVS." />
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+
+<body>
+
+<!-- HEADER -->
+<header style="border-bottom:1px solid #e5e7eb;">
+  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
+    <h2 style="margin:0;">Tirumala TVS</h2>
+    <nav>
+      <a href="../index.html" style="margin-right:16px;">Home</a>
+      <a href="../models.html" style="margin-right:16px;">Models</a>
+      <a href="../contacts.html">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<!-- HERO -->
+<section style="background:#0b4fd8;color:#fff;">
+  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
+    <h1 style="font-size:42px;margin-bottom:10px;">TVS iQube</h1>
+    <p style="font-size:18px;opacity:0.95;">
+      Smart electric scooter for modern urban mobility
+    </p>
+  </div>
+</section>
+
+<!-- CONTENT -->
+<main style="max-width:1200px;margin:auto;padding:50px 16px;">
+
+  <!-- OVERVIEW -->
+  <section style="margin-bottom:60px;">
+    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
+      Overview
+    </h2>
+
+    <p style="margin-bottom:18px;">
+      TVS iQube is a premium electric scooter designed for city commuters who want
+      a clean, quiet and connected riding experience. With smooth acceleration,
+      intelligent features and reliable build quality, iQube represents TVS’s
+      vision for future-ready urban transportation.
+    </p>
+  </section>
+
+  <!-- KEY HIGHLIGHTS -->
+  <section style="margin-bottom:60px;">
+    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
+      Key Highlights
+    </h2>
+
+    <ul style="margin-bottom:18px;">
+      <li>Zero-emission electric mobility</li>
+      <li>SmartXonnect connected technology</li>
+      <li>Smooth and silent acceleration</li>
+      <li>Low running and maintenance cost</li>
+      <li>Ideal for daily city commuting</li>
+    </ul>
+  </section>
+
+  <!-- PERFORMANCE -->
+  <section style="margin-bottom:60px;">
+    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
+      Performance & Range
+    </h2>
+
+    <table style="width:100%;border-collapse:collapse;margin-bottom:18px;">
+      <tr><td><strong>Motor</strong></td><td>Electric hub motor</td></tr>
+      <tr><td><strong>Top Speed</strong></td><td>Up to 82 km/h (variant dependent)</td></tr>
+      <tr><td><strong>Range</strong></td><td>Up to 100–150 km (IDC, variant dependent)</td></tr>
+      <tr><td><strong>Charging Time</strong></td><td>Approx. 4–5 hours</td></tr>
+    </table>
+  </section>
+
+  <!-- VARIANTS -->
+  <section style="margin-bottom:60px;">
+    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
+      Variants Available
+    </h2>
+
+    <ul style="margin-bottom:18px;">
+      <li>TVS iQube Standard</li>
+      <li>TVS iQube S</li>
+      <li>TVS iQube ST</li>
+    </ul>
+  </section>
+
+  <!-- FEATURES -->
+  <section style="margin-bottom:60px;">
+    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
+      Smart Features
+    </h2>
+
+    <ul style="margin-bottom:18px;">
+      <li>Large digital touchscreen display (select variants)</li>
+      <li>Navigation and call alerts</li>
+      <li>Geo-fencing and vehicle tracking</li>
+      <li>Over-the-air (OTA) updates</li>
+    </ul>
+  </section>
+
+  <!-- PRICE -->
+  <section style="margin-bottom:60px;">
+    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
+      Price (Indicative)
+    </h2>
+
+    <p>
+      Ex-showroom price in Bengaluru starts from  
+      <strong>₹1.30 lakh (approx.)</strong>
+    </p>
+    <p style="font-size:14px;color:#555;">
+      *Prices may vary based on variant, subsidy and offers
+    </p>
+  </section>
+
+  <!-- WHY BUY -->
+  <section style="margin-bottom:60px;">
+    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
+      Why Choose TVS iQube?
+    </h2>
+
+    <p>
+      TVS iQube is an excellent choice for riders looking to switch to electric
+      mobility without compromising on performance, comfort or reliability.
+      Backed by TVS engineering and service network, iQube delivers a stress-free
+      and future-ready riding experience.
+    </p>
+  </section>
+
+  <!-- CTA -->
+  <section style="padding:35px;background:#f5f7fb;border-radius:12px;">
+    <h3 style="margin-bottom:10px;">Interested in TVS iQube?</h3>
+    <p style="margin-bottom:16px;">
+      Visit Tirumala TVS, Bidarahalli or contact us for best offers and test ride.
+    </p>
+    <a href="../contacts.html"
+       style="display:inline-block;padding:12px 26px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
+      Enquire Now
+    </a>
+  </section>
+
+</main>
+
+<!-- FOOTER -->
+<footer style="border-top:1px solid #e5e7eb;margin-top:50px;">
+  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
+    © 2026 Tirumala TVS. All rights reserved.
+  </div>
+</footer>
+
+</body>
+</html>
 
